cn/snowskystudio/newgame/test/error/ConfigurationFileIsReadOnly.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class ConfigurationFileIsReadOnly(BaseError):
    TYPE = "ConfigurationFileIsReadOnly"
